# lite-cc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
cc/: __init__.py  __main__.py  agent.py  cli.py  config.py  llm.py  output.py  safety.py  stream.py  subagent.py
cc/plugins/: loader.py
cc/tools/: __init__.py  bash.py  grep.py  list_files.py  read_file.py  subagent.py  write_file.py
docs/: MVP.md  VISION.md
docs/plans/: 2026-03-07-mvp-design.md  2026-03-07-mvp-implementation.md
examples/code-analyst/.claude-plugin/: plugin.json
examples/code-analyst/commands/: analyze.md
examples/code-analyst/pipeline/code-review/: SKILL.md
examples/code-analyst/pipeline/flowchart/: SKILL.md
examples/code-analyst/pipeline/summarize/: SKILL.md
examples/ensemble-review/.claude-plugin/: plugin.json
examples/ensemble-review/pipeline/ensemble-review/: SKILL.md
tests/: test_agent.py  test_cli.py  test_config.py  test_llm.py  test_plugins.py  test_safety.py  test_stream.py  test_subagent.py  test_subagent_tool.py  test_tools.py
