[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-cc"
version = "0.1.0"
description = "Lightweight multi-model coding agent CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "litellm>=1.40",
    "oci>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
cc = "cc.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
