[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-cc"
version = "0.3.0"
description = "Lightweight multi-model coding agent CLI"
authors = [{name = "Keyang Ru", email = "rukeyang@gmail.com"}]
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["llm", "agent", "cli", "coding-agent", "litellm", "multi-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
    "litellm>=1.40",
    "oci>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/key4ng/lite-cc"
Repository = "https://github.com/key4ng/lite-cc"

[project.scripts]
litecc = "cc.cli:main"

[tool.setuptools.packages.find]
include = ["cc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
